fix align button

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -30,6 +30,11 @@ body {
 }
 
 .container .menu{
+	display:flex; 
+	justify-content: center;
+	align-items:center; 
+	color: black; 
+	font-size: 2em;
 	background-color: #E7E6DD;
 }
 .container img {
